--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -37,6 +37,10 @@
         <file>qml/Hideable.qml</file>
         <file>qml/BluetoothPage.qml</file>
         <file>images/dock_top.svg</file>
+        
+        <file>images/dock_bottom.png</file>
+        <file>images/dock_straight.png</file>
+        
         <file>images/dock_right.svg</file>
         <file>images/rot90.svg</file>
         <file>images/rot180.svg</file>
