--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -113,7 +113,7 @@
         <file>images/light/world.svg</file>
         <file>images/dark/world.svg</file>
         <file>images/sidebar/dark/datetime.svg</file>
-        <file>qml/Update/Main.qml</file>
+        <file>qml/Dev/Main.qml</file>
         <file>qml/Touchpad/Main.qml</file>
         <file>images/sidebar/dark/touchpad.svg</file>
         <file>images/dark/logo.png</file>
